# ncog-archived

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  authentication.md  cloudformation.yml  kubernetes.yml
.github/workflows/: rust.yml
database/: Cargo.toml
database/src/: lib.rs
database/src/migrations/: migration_0001_accounts.rs  mod.rs
khonsuweb/: Cargo.toml
khonsuweb/src/: alert.rs  flash.rs  forms.rs  lib.rs  localization.rs  markdown.rs  modal.rs  static_page.rs  title.rs  validations.rs
khonsuweb/src/forms/: button.rs  field.rs  radio.rs  storage.rs  text_input.rs
khonsuweb/src/validations/: combinators.rs  present.rs
migrations/: Cargo.toml
migrations/src/: lib.rs  main.rs  migrations.rs
migrations/src/migrations/: migration_0001_accounts.rs  migration_0002_movement.rs  migration_0002_reset_accounts.rs  migration_0003_prevent_timelord_changes.rs  migration_0004_twitch.rs  migration_0005_basws.rs  mod.rs
ncfg/: Cargo.toml
ncfg/src/: main.rs
ncog-client/: Cargo.toml
ncog-client/src/: config.rs  lib.rs  native.rs
ncog-migrations/: Cargo.toml
ncog-migrations/src/: connection.rs  migrations.rs
ncog-migrations/src/migrations/: migration_0001_accounts.rs  migration_0002_reset_accounts.rs  migration_0003_prevent_timelord_changes.rs  migration_0004_twitch.rs  migration_0005_basws.rs  migration_0006_collations.rs
ncog-server/: Cargo.toml
ncog-server/src/: database.rs  main.rs  pubsub.rs  randomnames.rs  twitch.rs  websockets.rs
ncog-server/src/websockets/: iam.rs
ncog-shared/: Cargo.toml
ncog-shared/src/: iam.rs  lib.rs  permissions.rs
ncog-shared/src/strings/en-US/: home-page.ftl  login.ftl  main.ftl
ncog-web/: Cargo.toml  Makefile.toml  main.js
ncog-web/src/: lib.rs  webapp.rs
ncog-web/src/webapp/: api.rs  backoffice.rs  login.rs  strings.rs
ncog-web/src/webapp/backoffice/: edit_form.rs  entity_list.rs
ncog-web/src/webapp/backoffice/entity_list/: body.rs
ncog-web/src/webapp/backoffice/roles/: edit.rs  list.rs  summary_list.rs
ncog-web/src/webapp/backoffice/roles/permission_statements/: edit.rs  list.rs
ncog-web/src/webapp/backoffice/users/: edit.rs  list.rs  mod.rs
ncog-web/static/: index.html  styles.css  styles.css.map
pure-yew/: Cargo.toml
pure-yew/src/: static_page.rs
pure-yew/src/forms/: mod.rs
server/: Cargo.toml
server/public/: index.html  pkg
server/src/: database.rs  logged_in.html  main.rs  permissions.rs  pubsub.rs  twitch.rs  websockets.rs
server/src/websockets/: iam.rs
shared/: Cargo.toml
shared/src/: iam.rs  lib.rs  localization.rs  permissions.rs  websockets.rs
shared/src/strings/en-US/: admin.ftl  footer.ftl  home-page.ftl  login.ftl  main.ftl  not-found.ftl
webapp/: Cargo.toml  Makefile.toml  index.html  main.js
webapp/sass/: styles.sass
webapp/src/: api.rs  lib.rs  loggedin.rs  login.rs  strings.rs  webapp.rs
webapp/src/webapp/: api.rs  backoffice.rs  loggedin.rs  login.rs  strings.rs
webapp/src/webapp/backoffice/: edit_form.rs  entity_list.rs  roles.rs  users.rs
webapp/src/webapp/backoffice/entity_list/: body.rs
webapp/src/webapp/backoffice/roles/: edit.rs  fields.rs  list.rs  mod.rs  summary_list.rs
webapp/src/webapp/backoffice/roles/permission_statements/: edit.rs  fields.rs  list.rs  mod.rs
webapp/src/webapp/backoffice/users/: edit.rs  fields.rs  list.rs
webapp/static/: index.html
webapp/strings/markdown/: footer.md  index.md  not_found.md
