[workspace]
members = [
    "server",
    "migrations",
    "shared",
    "ncfg",
    "ncog-client",
    "khonsuweb",
    "webapp"
]

[patch.crates-io]
# kludgine = { path = "../kludgine" }
basws-server = { path = "../basws/basws-server", version = "0.1.0-dev-4" }
basws-shared = { path = "../basws/basws-shared", version = "0.1.0-dev-4" }
basws-client = { path = "../basws/basws-client", version = "0.1.0-dev-4" }
