[workspace]
members = [
    "server",
    "migrations",
    "shared",
    "ncfg",
    "ncog-client",
    "khonsuweb",
    "webapp"
]

[patch.crates-io]
# kludgine = { path = "../kludgine" }
basws-server = { path = "../basws/basws-server", version = "0.1.0-dev-5" }
basws-shared = { path = "../basws/basws-shared", version = "0.1.0-dev-5" }
basws-yew = { path = "../basws/basws-yew", version = "0.1.0-dev-5" }
