[package]
name = "migrations"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsualabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "migrator"
path = "src/main.rs"

[dependencies]
sqlx-simple-migrator = {git = "https://github.com/khonsulabs/sqlx-simple-migrator.git"}
dotenv = "*"
tokio = {version = "*", features = ["macros", "blocking"]}
lazy_static="1"
futures = "0.3"
uuid={version = "*", features=["v4", "serde"]}
shared = {path = "../shared"}
[dependencies.sqlx]
version = "0.3"
default-features = false
features = [ "runtime-tokio", "macros" , "postgres", "uuid", "chrono",  "tls" ]