[package]
name = "ncfg"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gumdrop = "0.8"
ncog-client = {path = "../ncog-client"}
tokio = {version = "0.2", features=["full"]}
anyhow="1"
shared = {path = "../shared"}