[package]
name = "ncog-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.1"
dotenv = "0.15"
lazy_static = "1.4"
uuid = { version = "*", features = ["v4"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.10", features = ["json"] }
chrono = "0.4"
rand = "0.7"
ncog-migrations = { path = "../ncog-migrations" }
ncog-shared = { path = "../ncog-shared" }
async-trait = "0.1"
mime_guess = "2"
basws-server = "0.1.0-dev-8"
tracing = "0.1"
tracing-futures = { version = "0.2", default-features = false, features = [
    "futures-03"
] }
tracing-subscriber = "0.2"

[patch.crates-io]
# basws-server = { path = "../../basws/basws-server", version = "0.1.0-dev-8" }
# basws-shared = { path = "../../basws/basws-shared", version = "0.1.0-dev-8" }
