[package]
name = "server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2", features = ["full"]}
warp = "0.2"
futures = "0.3"
bincode = "1.2"
serde = "1"
serde_json="1"
serde_derive="1"
url = "2.1"
dotenv="0.15"
tera="1.3"
lazy_static="1.4"
crossbeam="0.7"
uuid={version = "*", features=["v4"]}
anyhow="1"
async-std="1"
reqwest = {version = "0.10", features=["json"]}
chrono = "0.4"
rand = "0.7"
migrations = {path = "../migrations"}
shared = {path = "../shared"}