[package]
name = "shared"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
uuid={version = "*", features=["v4", "serde"]}

[dependencies.chrono]
version="*"
features = ["serde"]