[package]
name = "shared"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
uuid={version = "*", features=["v4", "serde"]}

# Currently using local repo until https://github.com/XAMPPRocky/fluent-templates/pull/6 is merged
fluent-templates = {git = "https://github.com/ecton/fluent-templates"}
unic-langid = "0.9"
include_dir = "0.6"

[dependencies.chrono]
version="*"
features = ["serde"]
