[package]
name = "shared"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@nilobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = "1"
serde_derive = "1"
uuid = { version = "*", features = ["v4", "serde"] }
fluent-templates = "0.5"
unic-langid = "0.9"
include_dir = "0.6"
basws-shared = "0.1.0-dev-5"

[dependencies.chrono]
version = "*"
features = ["serde"]
