[package]
name = "webapp"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
yew = "*"
yew-router="*"
serde="*"
serde_derive="*"
khonsuweb = {path = "../khonsuweb"}
lazy_static = "*"