[package]
name = "webapp"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.17", features = ["cbor"] }
yew-router = "0.14"
serde = "1"
serde_derive = "1"
serde_json = "1"
khonsuweb = { path = "../khonsuweb" }
shared = { path = "../shared" }
lazy_static = "1"
web-sys = { version = "0.3", features = ["UrlSearchParams"] }
js-sys = "0.3"
thiserror = "1"
anyhow = "1"
serde_cbor = "0.11"
aes-gcm = "0.5"
aead = "0.2"
base64 = "0.12"
rand = { version = "0.7", features = ["wasm-bindgen"] }
sha2 = "0.8"
uuid = "0.8"
wasm-logger = "0.2"
log = "0.4"
basws-shared = { version = "0.1.0-dev-4" }

[dependencies.chrono]
version = "*"
features = ["serde", "js-sys"]
